<resources>
    <string name="app_name">IceCream</string>
    <string name="user_login">E-mail</string>
    <string name="user_password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="has_account">Уже есть аккаунт? Войти</string>
    <string name="show_password">Показать пароль</string>
    <string name="some_data">Некие данные</string>
    <string name="main_basket">Список товаров</string>
    <string name="add_to_cart">Добавить</string>
    <string name="search">Поиск</string>
    <string name="ice_cream_description">Самое вкусное описание мороженого</string>
    <string name="quantity">Количество</string>
    <string name="order">Заказ</string>
    <string name="basket">Корзина</string>
    <string name="create_order">Оформить заказ</string>
</resources>