<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_ice_cream"
                android:layout_width="@dimen/ice_cream_item_image"
                android:layout_height="@dimen/ice_cream_item_image"
                android:layout_margin="@dimen/margin_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ice_cream_description"
                style="@style/Theme.IceCreamShop.CardViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ice_cream_description"
                app:layout_constraintTop_toBottomOf="@id/image_ice_cream" />

            <TextView
                android:id="@+id/ice_cream_name"
                style="@style/Theme.IceCreamShop.CardViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_data"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ice_cream_description" />

            <TextView
                android:id="@+id/ice_cream_weight"
                style="@style/Theme.IceCreamShop.CardViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:text="@string/some_data"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toEndOf="@+id/ice_cream_name"
                app:layout_constraintTop_toBottomOf="@id/ice_cream_description" />

            <TextView
                android:id="@+id/ice_cream_price"
                style="@style/Theme.IceCreamShop.CardViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="0.0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ice_cream_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_info">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8"
                android:background="@drawable/quantity_field_background">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus_one_btn"
                    android:layout_width="@dimen/ice_cream_quantity"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_4"
                    android:background="@drawable/ic_minus_2"
                    app:backgroundTint="@color/black" />

                <TextView
                    android:id="@+id/current_quantity"
                    android:layout_width="@dimen/ice_cream_quantity"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus_one_btn"
                    android:layout_width="@dimen/ice_cream_quantity"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_4"
                    android:background="@drawable/ic_plus_1"
                    app:backgroundTint="@color/black" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_cart_btn"
                style="@style/Theme.IceCreamShop.CardViewFullColorBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/main_blue"
                android:text="@string/add_to_cart" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>